--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "license": "Apache-2.0",
   "keywords": [],
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --coverage",
     "lint": "gts lint",
     "clean": "gts clean",
     "compile": "tsc",
@@ -20,8 +20,11 @@
     "posttest": "npm.cmd run lint"
   },
   "devDependencies": {
+    "@types/jest": "^29.2.3",
+    "@types/node": "^14.11.2",
     "gts": "^3.1.1",
-    "typescript": "~4.7.0",
-    "@types/node": "^14.11.2"
+    "jest": "^29.3.1",
+    "ts-jest": "^29.0.3",
+    "typescript": "~4.7.0"
   }
 }
