--- a/package.json
+++ b/package.json
@@ -16,7 +16,15 @@
     "build/src"
   ],
   "license": "Apache-2.0",
-  "keywords": ["functional", "balanced tree", "binary search tree", "tree", "aa tree", "data structure", "serializable"],
+  "keywords": [
+    "functional",
+    "balanced tree",
+    "binary search tree",
+    "tree",
+    "aa tree",
+    "data structure",
+    "serializable"
+  ],
   "scripts": {
     "test": "jest --coverage",
     "lint": "gts lint",
@@ -31,6 +39,7 @@
     "@types/jest": "^29.2.3",
     "@types/node": "^14.11.2",
     "gts": "^3.1.1",
+    "immutable": "^4.1.0",
     "jest": "^29.3.1",
     "ts-jest": "^29.0.3",
     "typescript": "~4.7.0"
